# TypedUUID

./: CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  __init__.py  core.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
adapters/: fastapi.py  sqlalchemy.py
docs/: changelog.md  contributing.md  index.md
docs/api/: adapters.md  exceptions.md  factory.md  typeduuid.md
docs/examples/: cookbook.md  patterns.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: concepts.md  creating.md  parsing.md  serialization.md  short-encoding.md
docs/integrations/: fastapi.md  pydantic.md  sqlalchemy.md
docs/tutorial/: user-system.md
tests/: __init__.py  conftest.py  test_adapters.py  test_core.py  test_exceptions.py  test_new_features.py  test_thread_safety.py
typed_uuid/: core.py  utils.py
typed_uuid/adapters/: pydantic.py  sqlalchemy.py
